@@ -1,3 +1,11 @@
+buildscript {
+    repositories { jcenter() }
+
+    dependencies {
+        classpath "com.netflix.nebula:nebula-docker-plugin:latest.release"
+    }
+}
+
 plugins {
     id "net.ltgt.apt" version "0.15"
 }
@@ -6,14 +14,17 @@ apply plugin: 'java'
 apply plugin: 'net.ltgt.apt'
 apply plugin: 'net.ltgt.apt-idea'
 apply plugin: 'checkstyle'
+apply plugin: 'application'
+apply plugin: 'com.bmuschko.docker-remote-api'
+apply plugin: 'nebula.docker'
 
-
+version = '1.0.0'
 group 'com.github.ssullivan'
+mainClassName = 'com.github.ssullivan.ApiApplication'
 
 repositories {
     mavenCentral()
 }
-
 
 dependencies {
     annotationProcessor 'com.google.auto.value:auto-value:1.6'
@@ -28,10 +39,45 @@ dependencies {
 }
 
 
-
 checkstyle {
     toolVersion = "8.9"
 }
+
+
+nebulaDocker {
+    maintainerEmail = 'sjsullivan7@gmail.com'
+    dockerBase = 'openjdk:8-alpine'
+    dockerUrl = 'unix:///var/run/docker.sock'
+    dockerRepo = [test: '', prod: '', dev: '']
+    dockerImage = {
+        arg('UID=7999')
+        arg('GID=7999')
+        environmentVariable('JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap')
+        runCommand('apk --no-cache update \\\n' +
+                '    && apk --no-cache upgrade \\\n' +
+                '    && apk --no-cache add \\\n' +
+                '\tca-certificates \\\n' +
+                '\tcurl \\\n' +
+                '        shadow \\\n' +
+                '        su-exec \\\n' +
+                '    && sed -i s/#networkaddress.cache.ttl=-1/networkaddress.cache.ttl=30/ ${JAVA_HOME}/jre/lib/security/java.security \\\n' +
+                '    && addgroup -g $GID app_user \\\n' +
+                '    && adduser -D -s /bin/false -H -u $UID -G app_user app_user')
+        copyFile('docker-entrypoint.sh', '/')
+        entryPoint('/docker-entrypoint.sh')
+        runCommand('chown -R app_user.app_user /server-latest')
+        defaultCommand "/server-latest/bin/server"
+    }
+    afterEvaluate {
+        task copyResources(type: Copy) {
+            from 'docker/docker-entrypoint.sh'
+            into 'build/docker/'
+        }
+        createDockerfile.dependsOn(copyResources)
+    }
+}
+
+
 
 
 idea {
